--- a/DEMED/login.html
+++ b/DEMED/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>de·med</title>
+    <title>De·Med</title>
 
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
@@ -47,7 +47,7 @@
             <br/>
         </div>
         
-       <div id= "erro-login-box" class="login-box animated fadeInUp" style= "position: relative; top: 100px;">
+       <div id= "erro-login-box" class="login-box animated fadeInUp" style= "position: relative; top: 100px; display: none;">
             <div class="box-header">
                 <h2>ERRO</h2>
             </div>
