--- a/DEMED/paginapessoal.html
+++ b/DEMED/paginapessoal.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="user-scalable=no" />
-	<title>de·med - Página Pessoal</title>
+	<title>De·Med - Página Pessoal</title>
 
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
@@ -12,12 +12,9 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Custom Stylesheet -->
 	<link rel="stylesheet" href="css/style.css">
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="scripts.js"></script>
 </head>
 
-<body onload="start()">
+<body>
     <img class="img-logo-lado" src="images/logo.png" >
  
     <div id= "historico" class="container">
@@ -63,6 +60,12 @@
     <select id="day_sel" onchange="set_informacao(report_text)" style="font-size:2em; position: relative; left:1310px; top:170px; font-family: 'Lato', sans-serif;">
 	</select>
     
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="scripts.js"></script>
+	<script type="text/javascript">start()</script>
+
 
 <script>
 	$(document).ready(function () {
